# pd_vandy_reuse

./: .gitignore  READ.md  package-lock.json  package.json  pyproject.toml
backend/: .gitignore  README.md  list_users.py  reactivate.py  server.js
backend/app/: main.py  requirements.txt
backend/app/api/api_v1/: api.py  test_connection.py  test_mongo.py
backend/app/api/api_v1/endpoints/: auth.py  items.py  (+8 more)
backend/app/core/: config.py
backend/app/db/: session.py
frontend/: .gitignore  node.js  package-lock.json  package.json
frontend/src/: App.js  ItemsContext.js  UnreadCountContext.js  config.js  index.js
frontend/src/components/: ItemCard.js  ItemComponent.jsx  ItemsYouSelling.js  Layout.js  Navbar.js  ReplyForm.jsx  RequestItem.jsx  RequestList.jsx
frontend/src/data/: Chats.js  categories.js  messages.js
frontend/src/pages/: Bookmarks.js  ChatPage.js  Home.jsx  ItemDetails.js  LoginPage.js  Messages.js  Notifications.jsx  RequestItem.jsx  SellItem.jsx  SignUpPage.js
frontend/vandy-reuse-marketplace/: package-lock.json  package.json
frontend/vandy-reuse-marketplace/src/: App.js  index.js
frontend/vandy-reuse-marketplace/src/components/: ChatList.js  ChatWindow.js  Footer.js  Header.css  Header.js  ItemComponent.jsx  Layout.js
frontend/vandy-reuse-marketplace/src/data/: Items.js
frontend/vandy-reuse-marketplace/src/pages/: Bookmarks.js  ChatPage.js  Checkout.js  Dashboard.js  Home.js  Home.jsx  ItemDetails.js  Messages.js  Notifications.jsx  Sell.js  SellItem.js  SellItem.jsx
frontend/vandy-reuse-marketplace/src/styles/: GlobalStyles.js
(+3 files in other folders)
